--- a/common_challenge/style.css
+++ b/common_challenge/style.css
@@ -6,6 +6,10 @@ body {
   font-weight: bold;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 header {
   width: 100vw;
   display: flex;
@@ -30,10 +34,9 @@ nav {
   justify-content: space-between;
   padding: 0;
   margin: 1rem;
-  
 }
 
-ul > li {
+#nav-ul > li {
   list-style-type: none;
 }
 
@@ -74,7 +77,7 @@ main {
 
 #intro-section {
   width: 100%;
-  height: 50vh;
+  height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -165,7 +168,7 @@ main {
 #find-your-app {
   position: relative;
   width: 100%;
-  margin-top: 15vh;
+  margin-top: 10vh;
 }
 
 /*search bar*/
@@ -440,4 +443,43 @@ input {
   color: #fff;
   padding: 5px 15px;
   border-radius: 1px;
+  margin: 10px;
+}
+
+/*Info cards styling*/
+
+.infoWrapper {
+  display: flex;
+  justify-content: center;
+  background-color: #f3f3f3;
+}
+
+
+.container {
+  height: 100%;
+  width: 90%;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container > img {
+  width: 10vh;
+  height: auto;
+  padding: 10px;
+}
+
+.container > p:first-of-type {
+  margin: 0;
+}
+
+.data-container {
+  width: 100%;
+  height: 100%;
+}
+
+.data-container > ul {
+  margin: 0;
+  padding: 0;
 }
