--- a/common_challenge/style.css
+++ b/common_challenge/style.css
@@ -8,6 +8,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  background-image: url('images/bg_pattern.png');
 }
 
 header {
@@ -20,6 +21,33 @@ header {
   top: 0;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
 }
 
 nav {
@@ -38,6 +66,7 @@ nav {
 
 #nav-ul > li {
   list-style-type: none;
+  cursor: pointer;
 }
 
 #site-search {
@@ -146,6 +175,8 @@ main {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     border-radius: 5px;
+    background-color: #c0c5cc;
+    color: #fff;
 }
 
 .option1 > p {
@@ -162,6 +193,8 @@ main {
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   margin-left: 10px;
   border-radius: 5px;
+  background-color: #c0c5cc;
+  color: #fff;
 }
 
 /*Find your app*/
@@ -303,8 +336,37 @@ input {
 /*Information container hidden/shown */
 .hidden {
   display: block;
+  animation-name: scaleUp;
+  animation-timing-function: ease-in-out;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-direction: alternate;
 }
 
+.close {
+  display: none;
+  /* animation-name: scaleDown; */
+  animation-timing-function: ease-in-out;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
+  animation-direction: alternate;
+}
+
+@keyframes scaleUp {
+  0%   { 
+    transform: translateX(-100%); 		
+    }
+    100% { 
+    transform: translateX(0%); 
+    }
+}
+@keyframes scaleDown {
+  from {
+    transform: scale(1)
+  } to {
+    transform: scale(0);
+  }
+}
 .center-column-flex {
   display: flex;
   justify-content: center;
@@ -396,7 +458,8 @@ input {
 }
 
 .appInformationContainer {
-  top: -15%;
+  top: -45vh;
+  height: 65vh;
 }
 
 
@@ -483,3 +546,5 @@ input {
   margin: 0;
   padding: 0;
 }
+
+
