--- a/common_challenge/style.css
+++ b/common_challenge/style.css
@@ -540,6 +540,10 @@ input {
 .data-container {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5vh;
 }
 
 .data-container > ul {
